--- a/mysql/deployment.yaml
+++ b/mysql/deployment.yaml
@@ -37,6 +37,7 @@ spec:
           mountPath: /var/lib/mysql
       volumes:
       - name: mysql-persistent-storage
-        persistentVolumeClaim:
-          claimName: mysql-pv-claim
+        emptyDir: {}
+#        persistentVolumeClaim:
+#          claimName: mysql-pv-claim
 ---
